[tool.poetry]
name = "telegram-gpt-bot"
version = "0.1.0"
description = ""
authors = ["zeusina <kachusov_k@outlook.com>"]
readme = "README.md"
packages = [{include = "src/"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.7"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}
python-dotenv = "^1.0.0"
colorama = "^0.4.6"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
