[tool.poetry]
name = "telegram_gpt_bot"
version = "0.1.0"
description = ""
authors = ["zeusina <kachusov_k@outlook.com>"]
readme = "README.md"
packages = [{include = "src/"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}
python-dotenv = "^1.0.0"
colorama = "^0.4.6"
pyyaml = "^6.0"
gpt4free = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
